tests/language_modules/07_string/valid/string_substr.vf
module StringSubstr

function label() returns String
is
    return String.substr("veraflow", 0, 4)
end label

end StringSubstr