tests/language_modules/07_string/invalid_semantics/string_substr_start_type.vf
module StringSubstrStartType

function label() returns String
is
    return String.substr("veraflow", true, 4)
end label

end StringSubstrStartType